ECOSENT-2664 - Java 21. Release 3.71.0